--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
     "next": "12.1.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
